# LearnSDL2

./: CMakeLists.txt  main.cpp
